--- a/src/EditorFeatures/Core/EditorFeaturesResources.resx
+++ b/src/EditorFeatures/Core/EditorFeaturesResources.resx
@@ -889,4 +889,10 @@ Do you want to proceed?</value>
   <data name="Operation_is_not_ready_for_0_yet_see_task_center_for_more_detail" xml:space="preserve">
     <value>Operation is not ready for "{0}" yet. See bottom left corner for more details.</value>
   </data>
+  <data name="Toggle_Block_Comment" xml:space="preserve">
+    <value>Toggle Block Comment</value>
+  </data>
+  <data name="Toggling_block_comment_on_selection" xml:space="preserve">
+    <value>Toggling block comment on selection...</value>
+  </data>
 </root>
