--- a/src/EditorFeatures/Core/xlf/EditorFeaturesResources.pt-BR.xlf
+++ b/src/EditorFeatures/Core/xlf/EditorFeaturesResources.pt-BR.xlf
@@ -1284,6 +1284,16 @@ Deseja continuar?</target>
         <target state="translated">Formatador de Token Inteligente</target>
         <note />
       </trans-unit>
+      <trans-unit id="Toggling_block_comment_on_selection">
+        <source>Toggling block comment on selection...</source>
+        <target state="new">Toggling block comment on selection...</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="Toggle_Block_Comment">
+        <source>Toggle Block Comment</source>
+        <target state="new">Toggle Block Comment</target>
+        <note />
+      </trans-unit>
     </body>
   </file>
 </xliff>
