--- a/src/EditorFeatures/Core/xlf/EditorFeaturesResources.zh-Hans.xlf
+++ b/src/EditorFeatures/Core/xlf/EditorFeaturesResources.zh-Hans.xlf
@@ -1284,6 +1284,16 @@ Do you want to proceed?</source>
         <target state="translated">智能令牌格式化程序</target>
         <note />
       </trans-unit>
+      <trans-unit id="Toggling_block_comment_on_selection">
+        <source>Toggling block comment on selection...</source>
+        <target state="new">Toggling block comment on selection...</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="Toggle_Block_Comment">
+        <source>Toggle Block Comment</source>
+        <target state="new">Toggle Block Comment</target>
+        <note />
+      </trans-unit>
     </body>
   </file>
 </xliff>
