--- a/src/EditorFeatures/Core/xlf/EditorFeaturesResources.cs.xlf
+++ b/src/EditorFeatures/Core/xlf/EditorFeaturesResources.cs.xlf
@@ -1284,9 +1284,9 @@ Chcete pokračovat?</target>
         <target state="translated">Inteligentní formátování tokenů</target>
         <note />
       </trans-unit>
-      <trans-unit id="Toggling_block_comment_on_selection">
-        <source>Toggling block comment on selection...</source>
-        <target state="new">Toggling block comment on selection...</target>
+      <trans-unit id="Toggling_block_comment">
+        <source>Toggling block comment...</source>
+        <target state="new">Toggling block comment...</target>
         <note />
       </trans-unit>
       <trans-unit id="Toggle_Block_Comment">
